# caching-proxy-server

./: .gitignore  .pre-commit-config.yaml  README.md  cache.json  docker-compose.yml  generated-prometheus.yml  prometheus.yml  pyproject.toml  start-prometheus.sh
caching_proxy_server/: cache_handler.py  cli.py  config.py  logger.py  proxy_server.py
caching_proxy_server/kafka/: consumer.py  logger.py  producer.py  schema.py
caching_proxy_server/prometheus/: metrics.py  metrics_handlers.py
data/: proxy_server.log.1
prometheus/: docker-compose.yml
tests/: README.md  test_cache.py  test_clear.py  test_forwarding.py  test_req.py  test_request.py
